--- a/templates/movies/movie_detail.html
+++ b/templates/movies/movie_detail.html
@@ -1,16 +1,14 @@
 {% extends 'movies/base.html' %}
-{% load static i18n %}
-{% block title %} {{ movie.title }} {% endblock title %}
+{% block title %}{{ movie.title }}{% endblock %}
 {% block container %}
-    <div class="container py-md-3">
-{% endblock container %}
-
+            <div class="container py-md-3">
+            {% endblock %}
 {% block sidebar %}
-    <div class="side-bar col-lg-4">
-{% endblock sidebar %}
-
+                <div class="side-bar col-lg-4">
+                {% endblock %}
 {% block movie %}
-    <div class="left-ads-display col-lg-8">
+    {% load static i18n %}
+<div class="left-ads-display col-lg-8">
         <div class="row">
             <div class="desc1-left col-md-6">
                 <img src="{{ movie.poster.url }}" class="img-fluid" alt="">
@@ -60,23 +58,23 @@
                     <li>
                         <span><b>{% trans 'Сборы в США' %}:</b> ${{ movie.fees_in_usa }}</span></li>
                     <li>
-                        <span><b>{% trans 'Сборы в мире' %}:</b> ${{ movie.fess_in_world }}</span>
+                        <span><b>{% trans 'Сборы в мире' %}:</b> ${{ movie.fees_in_world }}</span>
                     </li>
-                    <li>
-                        <form action="{% url 'add_rating' %}" method="post" name="rating">
-                            <b>{% trans 'Рейтинг' %}:</b>
-                            {% csrf_token %}
-                            <input type="hidden" value="{{ movie.id }}" name="movie">
-                            <span class="rating">
-                                {% for k, v in star_form.fields.star.choices %}
-                                    <input id="rating{{ v }}" type="radio" name="star"
-                                           value="{{ k }}">
-                                    <label for="rating{{ v }}">{{ k }}</label>
-                                {% endfor %}
-                            </span>
-                            <span class="editContent">4.0</span>
-                        </form>
-                    </li>
+{#                    <li>#}
+{#                        <form action="{% url 'add_rating' %}" method="post" name="rating">#}
+{#                            <b>{% trans 'Рейтинг' %}:</b>#}
+{#                            {% csrf_token %}#}
+{#                            <input type="hidden" value="{{ movie.id }}" name="movie">#}
+{#                            <span class="rating">#}
+{#                                {% for k, v in star_form.fields.star.choices %}#}
+{#                                    <input id="rating{{ v }}" type="radio" name="star"#}
+{#                                           value="{{ k }}">#}
+{#                                    <label for="rating{{ v }}">{{ k }}</label>#}
+{#                                {% endfor %}#}
+{#                            </span>#}
+{#                            <span class="editContent">4.0</span>#}
+{#                        </form>#}
+{#                    </li>#}
                 </ul>
 
                 <div class="share-desc">
@@ -129,36 +127,36 @@
                         <span class="sub-tittle editContent">{{ movie.reviews_set.count }}</span>
                         {% trans 'Оставить отзыв ' %}
                     </h3>
-                    <form action="{% url 'add_review' movie.id %}" method="post" class="mt-4"
-                          id="formReview">
-                        {% csrf_token %}
-                        <input type="hidden" name="parent" id="contactparent" value="">
-                        <div class="form-group editContent">
-                            <label for="contactcomment" class="editContent">
-                                Ваш комментарий *
-                            </label>
-                            {{ form.text }}
-                        </div>
-                        <div class="d-sm-flex">
-                            <div class="col-sm-6 form-group p-0 editContent">
-                                <label for="contactusername" class="editContent">
-                                    Имя *
-                                </label>
-                                {{ form.name }}
-                            </div>
-                            <div class="col-sm-6 form-group ml-sm-3 editContent">
-                                <label for="contactemail" class="editContent">
-                                    Email *
-                                </label>
-                                {{ form.email }}
-                            </div>
-                            {{ form.captcha }}
-                        </div>
-                        <button type="submit"
-                                class="mt-3 btn btn-success btn-block py-3">
-                            Отправить
-                        </button>
-                    </form>
+{#                    <form action="{% url 'add_review' movie.id %}" method="post" class="mt-4"#}
+{#                          id="formReview">#}
+{#                        {% csrf_token %}#}
+{#                        <input type="hidden" name="parent" id="contactparent" value="">#}
+{#                        <div class="form-group editContent">#}
+{#                            <label for="contactcomment" class="editContent">#}
+{#                                Ваш комментарий *#}
+{#                            </label>#}
+{#                            {{ form.text }}#}
+{#                        </div>#}
+{#                        <div class="d-sm-flex">#}
+{#                            <div class="col-sm-6 form-group p-0 editContent">#}
+{#                                <label for="contactusername" class="editContent">#}
+{#                                    Имя *#}
+{#                                </label>#}
+{#                                {{ form.name }}#}
+{#                            </div>#}
+{#                            <div class="col-sm-6 form-group ml-sm-3 editContent">#}
+{#                                <label for="contactemail" class="editContent">#}
+{#                                    Email *#}
+{#                                </label>#}
+{#                                {{ form.email }}#}
+{#                            </div>#}
+{#                            {{ form.captcha }}#}
+{#                        </div>#}
+{#                        <button type="submit"#}
+{#                                class="mt-3 btn btn-success btn-block py-3">#}
+{#                            Отправить#}
+{#                        </button>#}
+{#                    </form>#}
                 </div>
                 <!--  //contact form grid ends here -->
             </div>
@@ -191,11 +189,4 @@
             </div>
         {% endfor %}
     </div>
-    <script>
-        function addReview(name, id) {
-            document.getElementById("contactparent").value = id;
-            document.getElementById("contactcomment").innerText = `${name}, `
-        }
-
-    </script>
-{% endblock movie %}
+{% endblock %}
