--- a/templates/movies/movie_detail.html
+++ b/templates/movies/movie_detail.html
@@ -124,39 +124,40 @@
                 <!-- contact form grid -->
                 <div class="contact-single">
                     <h3 class="editContent">
-                        <span class="sub-tittle editContent">{{ movie.reviews_set.count }}</span>
+                        <span class="sub-tittle editContent">Всего отзывов:{{ movie.review_set.count }}</span>
                         {% trans 'Оставить отзыв ' %}
                     </h3>
-{#                    <form action="{% url 'add_review' movie.id %}" method="post" class="mt-4"#}
-{#                          id="formReview">#}
-{#                        {% csrf_token %}#}
-{#                        <input type="hidden" name="parent" id="contactparent" value="">#}
-{#                        <div class="form-group editContent">#}
-{#                            <label for="contactcomment" class="editContent">#}
-{#                                Ваш комментарий *#}
-{#                            </label>#}
-{#                            {{ form.text }}#}
-{#                        </div>#}
-{#                        <div class="d-sm-flex">#}
-{#                            <div class="col-sm-6 form-group p-0 editContent">#}
-{#                                <label for="contactusername" class="editContent">#}
-{#                                    Имя *#}
-{#                                </label>#}
-{#                                {{ form.name }}#}
-{#                            </div>#}
-{#                            <div class="col-sm-6 form-group ml-sm-3 editContent">#}
-{#                                <label for="contactemail" class="editContent">#}
-{#                                    Email *#}
-{#                                </label>#}
-{#                                {{ form.email }}#}
-{#                            </div>#}
-{#                            {{ form.captcha }}#}
-{#                        </div>#}
-{#                        <button type="submit"#}
-{#                                class="mt-3 btn btn-success btn-block py-3">#}
-{#                            Отправить#}
-{#                        </button>#}
-{#                    </form>#}
+                     <form action="{% url 'django_movie:add_review' movie.id %}" method="post" class="mt-4" id="FormReview">
+                        {% csrf_token %}
+                         <input type=hidden name="parent" id="contactparent" value="" >
+                        <div class="form-group editContent">
+                            <label for="contactcomment" class="editContent">
+                                Ваш комментарий *
+                            </label>
+                            <textarea class="form-control border" rows="5" name="text"
+                                      id="contactcomment" required=""></textarea>
+                        </div>
+                        <div class="d-sm-flex">
+                            <div class="col-sm-6 form-group p-0 editContent">
+                                <label for="contactusername" class="editContent">
+                                    Имя *
+                                </label>
+                                <input type="text" class="form-control border" name="name"
+                                       id="contactusername" required="">
+                            </div>
+                            <div class="col-sm-6 form-group ml-sm-3 editContent">
+                                <label for="contactemail" class="editContent">
+                                    Email *
+                                </label>
+                                <input type="email" class="form-control border" name="email"
+                                       id="contactemail" required="">
+                            </div>
+                        </div>
+                        <button type="submit"
+                                class="mt-3 btn btn-success btn-block py-3">
+                            Отправить
+                        </button>
+                    </form>
                 </div>
                 <!--  //contact form grid ends here -->
             </div>
@@ -173,7 +174,7 @@
                     </p>
                     <a href="#formReview"
                        onclick="addReview('{{ review.name }}', '{{ review.id }}')">Ответить</a>
-                    {% for rew in review.reviews_set.all %}
+                    {% for rew in review.review_set.all %}
                         <div class="media mt-5 editContent">
                             <a class="pr-3" href="#">
                                 <img src="{% static 'images/te2.jpg' %}" class="img-fluid "
@@ -189,4 +190,12 @@
             </div>
         {% endfor %}
     </div>
-{% endblock %}
+    </div>
+    </div>
+    <script>
+        function addReview(name, id) {
+            document.getElementById("contactparent").value = id;
+            document.getElementById("contactcomment").innerText = `${name}, `
+        }
+    </script>
+{% endblock  %}
