--- a/templates/movies/movie_list.html
+++ b/templates/movies/movie_list.html
@@ -3,22 +3,22 @@
 {% block movie %}
                     <div class="left-ads-display col-lg-9">
                         <div class="row">
-                            {% for movie in movies_list %}
+                            {% for mov in movie_list %}
                             <div class="col-md-4 product-men">
                                 <div class="product-shoe-info editContent text-center mt-lg-4" >
                                     <div class="men-thumb-item">
-                                        <img src="{{ movie.poster.url }}" class="img-fluid" alt="" >
+                                        <img src="{{ mov.poster.url }}" class="img-fluid" alt="" >
                                     </div>
                                     <div class="item-info-product">
                                         <h4 class="">
-                                            <a href="{{ movie.get_absolute_url }}" class="editContent" >
-                                                {{ movie.title }}
+                                            <a href="{{ mov.get_absolute_url }}" class="editContent" >
+                                                {{ mov.title }}
                                             </a>
                                         </h4>
 
                                         <div class="product_price">
                                             <div class="grid-price">
-                                                <span class="money editContent" >{{ movie.tag_line }}</span>
+                                                <span class="money editContent" >{{ mov.tag_line }}</span>
                                             </div>
                                         </div>
                                         <ul class="stars">
