--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -4,16 +4,9 @@
                 <div class="row footer-top">
                     <div class="col-lg-4 footer-grid_section_w3layouts">
                         <h2 class="logo-2 mb-lg-4 mb-3">
-                            <a href="index.html" class="editContent">
-                                <span class="fa" aria-hidden="true" >
-                                    Django School
-                                </span>
-                            </a>
                         </h2>
                         <p class="editContent" >
-                            Канал для программистов и людей, которые хотят развиваться в сфере IT.
-                            Видео уроки по python 3, Django 2, Django 3, JavaScript, Vue.js, HTML, CSS
-                            и многое другое.
+                            Django Movie
                         </p>
                         <h4 class="sub-con-fo ad-info my-4 editContent" >Catch on Social</h4>
                         <ul class="w3layouts_social_list media-soc list-unstyled">
@@ -95,11 +88,11 @@
                                 <div class="contact-info">
                                     <div class="footer-address-inf my-4">
                                         <h4 class="ad-info mb-2 editContent" >Email </h4>
-                                        <p class="editContent" ><a href="mailto:info@example.com">info@example.com</a></p>
+                                        <p class="editContent" ><a href="mailto:info@example.com"></a></p>
                                     </div>
                                     <div class="footer-address-inf">
                                         <h4 class="ad-info mb-2 editContent" >Location</h4>
-                                        <p class="editContent" >New York City</p>
+                                        <p class="editContent" >Minsk</p>
                                     </div>
                                 </div>
                             </div>
@@ -115,9 +108,6 @@
         <div class="cpy-right py-3">
             <div class="container">
                 <div class="row">
-                    <p class="col-md-10 text-left">© 2019 DjangoMovie. All rights reserved | Design by
-                        <a href="https://djangochannel.com"> DJANGO SCHOOL.</a>
-                    </p>
                     <!-- move top icon -->
                     <a href="#home" class="move-top text-right col-md-2"><span class="fa fa-long-arrow-up" aria-hidden="true" ></span></a>
                     <!-- //move top icon -->
