--- a/templates/movies/movie_detail.html
+++ b/templates/movies/movie_detail.html
@@ -45,7 +45,7 @@
                                 </span>
                     </li>
                     <li style="list-style: none"><span><b>{% trans 'Жанр' %}:</b>
-                        {% for genre in movie.genres.all %}
+                        {% for genre in movie.genre.all %}
                             {{ genre.name }}
                         {% endfor %}
                                     </span>
@@ -60,21 +60,21 @@
                     <li>
                         <span><b>{% trans 'Сборы в мире' %}:</b> ${{ movie.fees_in_world }}</span>
                     </li>
-{#                    <li>#}
-{#                        <form action="{% url 'add_rating' %}" method="post" name="rating">#}
-{#                            <b>{% trans 'Рейтинг' %}:</b>#}
-{#                            {% csrf_token %}#}
-{#                            <input type="hidden" value="{{ movie.id }}" name="movie">#}
-{#                            <span class="rating">#}
-{#                                {% for k, v in star_form.fields.star.choices %}#}
-{#                                    <input id="rating{{ v }}" type="radio" name="star"#}
-{#                                           value="{{ k }}">#}
-{#                                    <label for="rating{{ v }}">{{ k }}</label>#}
-{#                                {% endfor %}#}
-{#                            </span>#}
-{#                            <span class="editContent">4.0</span>#}
-{#                        </form>#}
-{#                    </li>#}
+                    <li>
+                        <form action="{% url 'django_movie:add_rating' %}" method="post" name="rating">
+                            <b>Рейтинг:</b>
+                            {% csrf_token %}
+                            <input type="hidden" value="{{ movie.id }}" name="movie">
+                            <span class="rating">
+                                {% for k, v in star_form.fields.star.choices %}
+                                    <input id="rating{{ v }}" type="radio" name="star"
+                                           value="{{ k }}">
+                                    <label for="rating{{ v }}">{{ k }}</label>
+                                {% endfor %}
+                            </span>
+                            <span class="editContent">4.0</span>
+                        </form>
+                    </li>
                 </ul>
 
                 <div class="share-desc">
